Interprete1/gen/chocPyParser.java
// Generated from E:/ProyectosIntelliJIDEA/Java/Java/Interprete1/Gramatica\chocPy.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class chocPyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, RETURN=2, TK_PAR_IZQ=3, TK_PAR_DER=4, TK_EJECUTA=5, TK_DOS_PUNTOS=6, 
		CLASS=7, INT=8, TK_ASIG=9, STR=10, BOOL=11, OBJECT=12, PRINT=13, TK_SQR_IZQ=14, 
		TK_SQR_DER=15, TK_COMA=16, LEN=17, TRUE=18, FALSE=19, SELF=20, IF=21, 
		ELSE=22, TK_PUNTO=23, GLOBAL=24, NONLOCAL=25, INIT=26, NONE=27, MINUS_OP=28, 
		MULT_OP=29, DIV_OP=30, MOD_OP=31, NOT=32, OR=33, AND=34, NOT_EQUAL=35, 
		PLUS_OP=36, TK_COR_IZQ=37, TK_COR_DER=38, PASS=39, TK_COM=40, CONTINUE=41, 
		EXCEPT=42, FINALLY=43, BREAK=44, FOR=45, FROM=46, IMPORT=47, IN=48, IS=49, 
		LAMBDA=50, RAISE=51, TRY=52, WHILE=53, AS=54, DEL=55, ELIF=56, ASSERT=57, 
		MINOR_EQUAL=58, MAYOR_EQUAL=59, EQUAL=60, MAYOR=61, MINOR=62, WITH=63, 
		SKIP_=64, IDENTIFIER=65, TK_ENTERO=66, STRING=67, IDSTRING=68, NEWLINE=69, 
		INDENT=70, DEDENT=71;
	public static final int
		RULE_program = 0, RULE_class_def = 1, RULE_class_body = 2, RULE_func_def = 3, 
		RULE_metd_def = 4, RULE_func_body = 5, RULE_typed_var = 6, RULE_type = 7, 
		RULE_global_decl = 8, RULE_nonlocal_decl = 9, RULE_var_def = 10, RULE_stmt = 11, 
		RULE_simple_stmt = 12, RULE_block = 13, RULE_literal = 14, RULE_expr = 15, 
		RULE_cexpr = 16, RULE_bin_op = 17, RULE_target = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "class_def", "class_body", "func_def", "metd_def", "func_body", 
			"typed_var", "type", "global_decl", "nonlocal_decl", "var_def", "stmt", 
			"simple_stmt", "block", "literal", "expr", "cexpr", "bin_op", "target"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'return'", "'('", "')'", "'->'", "':'", "'class'", "'int'", 
			"'='", "'str'", "'bool'", "'object'", "'print'", "'['", "']'", "','", 
			"'len'", "'True'", "'False'", "'self'", "'if'", "'else'", "'.'", "'global'", 
			"'nonlocal'", "'__init__'", "'None'", "'-'", "'*'", "'//'", "'%'", "'not'", 
			"'or'", "'and'", "'!='", "'+'", "'{'", "'}'", "'pass'", "'#'", "'continue'", 
			"'except'", "'finally'", "'break'", "'for'", "'from'", "'import'", "'in'", 
			"'is'", "'lambda'", "'raise'", "'try'", "'while'", "'as'", "'del'", "'elif'", 
			"'assert'", "'<='", "'>='", "'=='", "'>'", "'<'", "'with'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "RETURN", "TK_PAR_IZQ", "TK_PAR_DER", "TK_EJECUTA", "TK_DOS_PUNTOS", 
			"CLASS", "INT", "TK_ASIG", "STR", "BOOL", "OBJECT", "PRINT", "TK_SQR_IZQ", 
			"TK_SQR_DER", "TK_COMA", "LEN", "TRUE", "FALSE", "SELF", "IF", "ELSE", 
			"TK_PUNTO", "GLOBAL", "NONLOCAL", "INIT", "NONE", "MINUS_OP", "MULT_OP", 
			"DIV_OP", "MOD_OP", "NOT", "OR", "AND", "NOT_EQUAL", "PLUS_OP", "TK_COR_IZQ", 
			"TK_COR_DER", "PASS", "TK_COM", "CONTINUE", "EXCEPT", "FINALLY", "BREAK", 
			"FOR", "FROM", "IMPORT", "IN", "IS", "LAMBDA", "RAISE", "TRY", "WHILE", 
			"AS", "DEL", "ELIF", "ASSERT", "MINOR_EQUAL", "MAYOR_EQUAL", "EQUAL", 
			"MAYOR", "MINOR", "WITH", "SKIP_", "IDENTIFIER", "TK_ENTERO", "STRING", 
			"IDSTRING", "NEWLINE", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "chocPy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public chocPyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(chocPyParser.EOF, 0); }
		public List<Var_defContext> var_def() {
			return getRuleContexts(Var_defContext.class);
		}
		public Var_defContext var_def(int i) {
			return getRuleContext(Var_defContext.class,i);
		}
		public List<Func_defContext> func_def() {
			return getRuleContexts(Func_defContext.class);
		}
		public Func_defContext func_def(int i) {
			return getRuleContext(Func_defContext.class,i);
		}
		public List<Class_defContext> class_def() {
			return getRuleContexts(Class_defContext.class);
		}
		public Class_defContext class_def(int i) {
			return getRuleContext(Class_defContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof chocPyVisitor ) return ((chocPyVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(41);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IDENTIFIER:
						{
						setState(38);
						var_def();
						}
						break;
					case DEF:
						{
						setState(39);
						func_def();
						}
						break;
					case CLASS:
						{
						setState(40);
						class_def();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(45);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << TK_PAR_IZQ) | (1L << PRINT) | (1L << TK_SQR_IZQ) | (1L << LEN) | (1L << TRUE) | (1L << FALSE) | (1L << SELF) | (1L << IF) | (1L << NONE) | (1L << MINUS_OP) | (1L << NOT) | (1L << PASS) | (1L << FOR) | (1L << WHILE))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (IDENTIFIER - 65)) | (1L << (TK_ENTERO - 65)) | (1L << (STRING - 65)) | (1L << (IDSTRING - 65)))) != 0)) {
				{
				{
				setState(46);
				stmt();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_defContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(chocPyParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(chocPyParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(chocPyParser.IDENTIFIER, i);
		}
		public TerminalNode TK_PAR_IZQ() { return getToken(chocPyParser.TK_PAR_IZQ, 0); }
		public TerminalNode TK_PAR_DER() { return getToken(chocPyParser.TK_PAR_DER, 0); }
		public TerminalNode TK_DOS_PUNTOS() { return getToken(chocPyParser.TK_DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(chocPyParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(chocPyParser.INDENT, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(chocPyParser.DEDENT, 0); }
		public TerminalNode OBJECT() { return getToken(chocPyParser.OBJECT, 0); }
		public Class_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).enterClass_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).exitClass_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof chocPyVisitor ) return ((chocPyVisitor<? extends T>)visitor).visitClass_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_defContext class_def() throws RecognitionException {
		Class_defContext _localctx = new Class_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(CLASS);
			setState(55);
			match(IDENTIFIER);
			setState(56);
			match(TK_PAR_IZQ);
			setState(57);
			_la = _input.LA(1);
			if ( !(_la==OBJECT || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(58);
			match(TK_PAR_DER);
			setState(59);
			match(TK_DOS_PUNTOS);
			setState(60);
			match(NEWLINE);
			setState(61);
			match(INDENT);
			setState(62);
			class_body();
			setState(63);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_bodyContext extends ParserRuleContext {
		public TerminalNode PASS() { return getToken(chocPyParser.PASS, 0); }
		public TerminalNode NEWLINE() { return getToken(chocPyParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(chocPyParser.EOF, 0); }
		public List<Var_defContext> var_def() {
			return getRuleContexts(Var_defContext.class);
		}
		public Var_defContext var_def(int i) {
			return getRuleContext(Var_defContext.class,i);
		}
		public List<Metd_defContext> metd_def() {
			return getRuleContexts(Metd_defContext.class);
		}
		public Metd_defContext metd_def(int i) {
			return getRuleContext(Metd_defContext.class,i);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).exitClass_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof chocPyVisitor ) return ((chocPyVisitor<? extends T>)visitor).visitClass_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_body);
		int _la;
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				match(PASS);
				setState(66);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case DEF:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(69);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IDENTIFIER:
						{
						setState(67);
						var_def();
						}
						break;
					case DEF:
						{
						setState(68);
						metd_def();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(71); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DEF || _la==IDENTIFIER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_defContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(chocPyParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(chocPyParser.IDENTIFIER, 0); }
		public TerminalNode TK_PAR_IZQ() { return getToken(chocPyParser.TK_PAR_IZQ, 0); }
		public TerminalNode TK_PAR_DER() { return getToken(chocPyParser.TK_PAR_DER, 0); }
		public TerminalNode TK_DOS_PUNTOS() { return getToken(chocPyParser.TK_DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(chocPyParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(chocPyParser.INDENT, 0); }
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(chocPyParser.DEDENT, 0); }
		public List<Typed_varContext> typed_var() {
			return getRuleContexts(Typed_varContext.class);
		}
		public Typed_varContext typed_var(int i) {
			return getRuleContext(Typed_varContext.class,i);
		}
		public TerminalNode TK_EJECUTA() { return getToken(chocPyParser.TK_EJECUTA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> TK_COMA() { return getTokens(chocPyParser.TK_COMA); }
		public TerminalNode TK_COMA(int i) {
			return getToken(chocPyParser.TK_COMA, i);
		}
		public Func_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).enterFunc_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof chocPyListener ) ((chocPyListener)listener).exitFunc_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof chocPyVisitor ) return ((chocPyVisitor<? extends T>)visitor).visitFunc_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_defContext func_def() throws RecognitionException {
		Func_defContext _localctx = new Func_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(DEF);
			setState(76);
			match(IDENTIFIER);
			setState(77);
			match(TK_PAR_IZQ);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(78);
				typed_var();
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TK_COMA) {
					{
					{
					setState(79);
					match(TK_COMA);
					setState(80);
					typed_var();
					}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(88);
			match(TK_PAR_DER);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_EJECUTA) {
				{
				setState(89);
				match(TK_EJECUTA);
				setState(90);
				type();
				}
			}

			setState(93);
			match(TK_DOS_PUNTOS);
			setState(94);
			match(NEWLINE);
			setState(95);
			match(INDENT);
			setState(96);
			func_body();
			setState(97);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Metd_defContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(chocPyParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(chocPyParser.IDENTIFIER, 0); }
		public TerminalNode TK_PAR_IZQ() { return getToken(chocPyParser.TK_PAR_IZQ, 0); }
		public TerminalNode SELF() { return getToken(chocPyParser.SELF, 0); }
		public List<TerminalNode> TK_DOS_PUNTOS() { return getTokens(chocPyParser.TK_DOS_PUNTOS); }
		public TerminalNode TK_DOS_PUNTOS(int i) {
			return getToken(chocPyParser.TK_DOS_PUNTOS, i);
		}
		public TerminalNode STRING() { return getToken(chocPyParser.STRING, 0); }
		public TerminalNode TK_PAR_DER() { return getToken(chocPyParser.TK_PAR_DER, 0); }
		public TerminalNode NEWLINE() { return getToken(chocPyParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(chocPyParser.INDENT, 0); }
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(chocPyParser.DEDENT, 0); }
		public TerminalNode TK_EJECUTA() { return getToken(chocPyParser.TK_EJECUTA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> TK_COMA() { return getTokens(chocPyParser.TK_COMA); }
		public TerminalNode TK_COMA(int i) {
			return getToken(chocPyParser.TK_COMA, i);
		}
		public List<Typed_varContext> typed_var() {
			return getRuleContexts(Typed_varContext.class);
		}
		public Typed_varContext typed_var(int i) {
			return getRuleContext(Typed_varContext.class,i);
		}
